--- a/.github/workflows/publishNpm.yml
+++ b/.github/workflows/publishNpm.yml
@@ -2,10 +2,7 @@
 
 name: publish to npm
 
-on:
-  push:
-      tags:
-        - v*.*.*
+on: [push, pull_request, workflow_dispatch]
 
 jobs:
   publish-npm:
