--- a/.github/workflows/publishNpm.yml
+++ b/.github/workflows/publishNpm.yml
@@ -21,6 +21,12 @@ jobs:
         uses: arjundashrath/harden-runner@provgen
         with:
           egress-policy: audit
+      - name: 'Upload Artifact'
+        uses: actions/upload-artifact@v3
+        with:
+          name: my-artifact
+          path: my_file.txt
+          retention-days: 10
       - run: yarn
       - run: yarn build
       - name: publish vite plugin
