--- a/.github/workflows/publishNpm.yml
+++ b/.github/workflows/publishNpm.yml
@@ -22,7 +22,8 @@ jobs:
         with:
           egress-policy: audit
       - name: 'Upload Artifact'
-        uses: actions/upload-artifact@v3
+      - run: npm publish
+      - uses: actions/upload-artifact@v3
         with:
           name: my-artifact
           path: my_file.txt
